--- a/Client/src/components/Register/Register.css
+++ b/Client/src/components/Register/Register.css
@@ -3,19 +3,17 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #f5f5f5; 
-    width: 60%;
-    height: auto;
+    background-color: #f0f4f8; 
+    width: 400px; 
     padding: 2rem;
-    margin-top: 10rem;
-    margin-left: 18rem;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); 
-    border-radius: 10px; 
+    margin: 3rem auto; 
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1); 
+    border-radius: 12px; 
 }
 
 .register_Title {
-    font-size: 24px;
-    margin-bottom: 1rem;
+    font-size: 28px;
+    margin-bottom: 1.5rem;
     color: #333; 
 }
 
@@ -27,10 +25,10 @@
 }
 
 .register_Input {
-    margin: 0.5rem 0; 
+    margin: 0.75rem 0; 
     padding: 0.75rem; 
-    border: 1px solid #ccc; 
-    border-radius: 5px; 
+    border: 1px solid #ddd; 
+    border-radius: 6px; 
     font-size: 16px; 
     outline: none; 
     transition: border-color 0.3s; 
@@ -43,8 +41,6 @@
 
 .register_Input::placeholder {
     color: #888; 
-    opacity: 1; 
-    font-style: italic; 
 }
 
 .register_Button {
@@ -52,11 +48,11 @@
     background-color: #007BFF; 
     color: white; 
     border: none; 
-    border-radius: 5px; 
+    border-radius: 6px; 
     font-size: 16px; 
     cursor: pointer; 
     transition: background-color 0.3s; 
-    width: 21rem;
+    width: 100%; /* Full width */
 }
 
 .register_Button:hover {
@@ -77,3 +73,30 @@
 .register_Para a:hover {
     text-decoration: underline; 
 }
+
+.errorMessage {
+    color: #d9534f; /* Bootstrap Danger Color */
+    font-weight: bold;
+    font-size: 1rem;
+    padding: 10px;
+    border: 1px solid #d9534f;
+    background-color: #f2dede; 
+    border-radius: 5px;
+    margin-top: 10px;
+    text-align: center;
+    width: 100%; 
+}
+
+
+.registering-text {
+    color: #36d7b7; 
+    font-size: 1.2em;
+    font-weight: bold;
+    margin-top: 10px;
+    animation: fadeIn 1.5s infinite;
+  }
+
+  @keyframes fadeIn {
+    0%, 100% { opacity: 1; }
+    50% { opacity: 0.5; }
+  }
