--- a/Client/src/components/Header/header.css
+++ b/Client/src/components/Header/header.css
@@ -116,3 +116,28 @@
     text-align: center; 
 }
 
+.admin-section{
+    color: black;
+}
+
+
+.admin-section {
+    margin-left: 1rem; 
+    margin-right: 1rem;
+}
+
+.admin-section a {
+    background-color: rgb(127, 86, 218); 
+    color: white;
+    padding: 0.5rem 1rem;
+    border-radius: 0.3rem;
+    font-size: 1rem;
+    text-decoration: none;
+    height: 8rem;
+    transition: background-color 0.3s, color 0.3s; 
+}
+
+.admin-section a:hover {
+    background-color: rgb(108, 70, 188); 
+    color: white;
+}
